Bump unit testing from JUnit 4 to 5